# Personal-AI-Employee

./: .gitignore  CLAUDE.md  README.md
.obsidian/: graph.json  (+1 more)
level-platinum/local/: approval_watcher.py  attachment_extractor.py  dashboard_updater.py  ecosystem.config.cjs  facebook_poster.py  facebook_watcher.py  filesystem_watcher.py  instagram_watcher.py  linkedin_watcher.py  orchestrator.py  pyproject.toml  twitter_watcher.py  whatsapp_watcher.js
level-platinum/local/mcp-email-server/: index.js  package.json
level-platinum/local/mcp-email-server/tools/: draft_email.js  gmail_auth.js  search_emails.js
level-platinum/local/mcp-odoo-server/: package.json
level-platinum/local/mcp-odoo-server/tools/: odoo_auth.js
level-silver/: .gitignore  QUICKSTART.md  README.md  SECURITY.md  approval_watcher.py  backoff.py  dashboard_updater.py  ecosystem.config.cjs  gmail_watcher.py  logger.py  orchestrator.py  package.json  pyproject.toml  run_watchers.py  wa_setup.bat
level-silver/.claude/hooks/: stop.py
level-silver/.claude/skills/fte-approve/: SKILL.md
level-silver/.claude/skills/fte-briefing/: SKILL.md
level-silver/.claude/skills/fte-gmail-triage/: SKILL.md
level-silver/.claude/skills/fte-linkedin-draft/: SKILL.md
level-silver/AI_Employee_Vault/: Company_Handbook.md  Dashboard.md
level-silver/mcp-email-server/: package-lock.json
level-silver/mcp-email-server/tools/: send_email.js
level-silver/schedules/: README.md  morning_briefing.bat  weekly_review.bat
level-silver/tests/: test_filesystem_watcher.py  test_id_tracker.py  test_orchestrator.py
(+168 files in other folders)
