[project]
name = "silver-fte"
version = "0.1.0"
description = "Silver tier Personal AI Employee — Gmail, WhatsApp, LinkedIn, MCP, HITL, scheduling"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.190.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
